--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: AI Coding Manifesto
 description: Best Practices for AI-Assisted Contributions in Open Source
 url: "https://ai-coding-manifesto.github.io"
-baseurl: "/ai-coding-manifesto"
+baseurl: ""
 
 markdown: kramdown
 highlighter: rouge
