chore: Changing to Vibe Coding and adding image
Signed-off-by: Francisco Javier Arceo <farceo@redhat.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: AI Coding Manifesto
+title: Vibe Coding Manifesto
 description: Best Practices for AI-Assisted Contributions in Open Source
 url: "https://ai-coding-manifesto.github.io"
 baseurl: ""
